yo/yo_core.h

////////////////////////////////////////////////////////////////
//
//
// Types
//
//
////////////////////////////////////////////////////////////////

typedef uint64_t yo_id_t;
typedef uint32_t yo_error_t;
typedef uint32_t yo_axis_t;
// TODO(rune): Better explanations
// TODO(rune): Some kind of wrapping layout like CSS flexbox
// Determines how yo_box_node arranges its children
typedef uint32_t yo_layout_t;
typedef uint32_t yo_align_t;
typedef uint32_t yo_overflow_t;
typedef uint32_t yo_popup_flags_t;
typedef uint32_t yo_box_flags_t;
typedef uint32_t yo_anim_flags_t;
typedef uint32_t yo_mouse_button_t;
typedef uint32_t yo_keycode_t;
typedef uint16_t yo_modifier_t;
typedef uint32_t yo_frame_flags_t;
typedef struct yo_signal yo_signal_t;
struct yo_signal
{
    union { bool left_clicked, clicked; };
    bool right_clicked;

    bool       hovered;
    yo_v2i_t mouse_pos;  // NOTE(rune): Relative to arranged rect

    yo_keycode_t keycode;
    bool is_alt_down;
    bool is_ctrl_down;
    bool is_shift_down;

    bool is_hot;
    bool is_active;
};
typedef struct yo_render_info yo_render_info_t;
struct yo_render_info
{
    uint32_t w;
    uint32_t h;

    yo_draw_cmd_t *draw_cmds;
    size_t         draw_cmds_count;

    // TODO(rune): Multiple textures
    struct
    {
        uint32_t id;
        yo_v2i_t dim;
        void    *pixels;
        bool     dirty;
    } tex;

    bool lazy;
};
////////////////////////////////////////////////////////////////
//
//
// Configuration
//
//
////////////////////////////////////////////////////////////////

typedef struct yo_config yo_config_t;
struct yo_config
{
    uint32_t popup_close_delay;
};
////////////////////////////////////////////////////////////////
//
//
// Fonts
//
//
////////////////////////////////////////////////////////////////

typedef struct yo_font_id yo_font_id_t; // TODO(rune): Just make it a struct { uint64_t u64; };
struct yo_font_id
{
    union
    {
        struct
        {
            uint16_t slot;
            uint16_t _unused;
            uint32_t generation;
        };
        struct
        {
            uint64_t u64;
        };
    };
};
////////////////////////////////////////////////////////////////
//
//
// Box
//
//
////////////////////////////////////////////////////////////////

typedef struct yo_length yo_length_t;
struct yo_length
{
    float min, max, rel;
    bool is_rel;
};
typedef struct yo_text_field_state yo_text_field_state_t;
struct yo_text_field_state
{
    uint32_t cursor;
    uint32_t marker;
};
typedef struct yo_border yo_border_t;
struct yo_border
{
    yo_corners_f32_t radius;
    float            thickness;
    yo_v4f_t         color;
};
typedef struct yo_box     yo_box_t;
typedef struct yo_context yo_context_t;
////////////////////////////////////////////////////////////////
//
//
// Context
//
//
////////////////////////////////////////////////////////////////

YO_API yo_context_t *   yo_create_context(YO_PRINTF_FORMAT_STRING yo_config_t *config);
YO_API void             yo_destroy_context(yo_context_t *context);
YO_API void             yo_select_context(yo_context_t *context);
////////////////////////////////////////////////////////////////
//
//
// Frame
//
//
////////////////////////////////////////////////////////////////

YO_API bool             yo_begin_frame(float time, yo_frame_flags_t flags);
YO_API void             yo_end_frame(yo_render_info_t *buffer);
////////////////////////////////////////////////////////////////
//
//
// Input
//
//
////////////////////////////////////////////////////////////////

YO_API void             yo_input_begin(void);
YO_API void             yo_input_mouse_click(yo_mouse_button_t button, uint32_t x, uint32_t y, yo_modifier_t modifiers);
YO_API void             yo_input_scroll(float x, float y);
YO_API void             yo_input_key(yo_keycode_t key, yo_modifier_t modifiers);
YO_API void             yo_input_char(char c, yo_modifier_t modifiers);
YO_API void             yo_input_unicode(uint32_t codepoint, yo_modifier_t modifiers);
YO_API void             yo_input_end(void);
YO_API yo_v2i_t         yo_query_mouse_pos(void);
YO_API bool             yo_query_mouse_button(yo_mouse_button_t button);      // NOTE(m2dx): Was mouse button down during frame?
YO_API bool             yo_query_mouse_button_down(yo_mouse_button_t button); // NOTE(m2dx): Did mouse button change from up->down during frame?
YO_API bool             yo_query_mouse_button_up(yo_mouse_button_t button);   // NOTE(m2dx): Dis mouse button change from down->up during frame?
YO_API yo_v2f_t         yo_query_scroll(void);
// TODO(rune): Procedures for querying keyboard state.

YO_API float            yo_delta(void);
YO_API yo_id_t          yo_id_from_string(char *string);
YO_API yo_id_t          yo_id_from_format(YO_PRINTF_FORMAT_STRING char *format, ...);
YO_API yo_id_t          yo_id_from_format_v(char *format, va_list args);
YO_API void             yo_push_id(yo_id_t id);
YO_API yo_id_t          yo_pop_id(void);
////////////////////////////////////////////////////////////////
//
//
// Box
//
//
////////////////////////////////////////////////////////////////

YO_API yo_box_t *       yo_box(yo_id_t id, yo_box_flags_t flags);
YO_API yo_signal_t      yo_get_signal(yo_box_t *box);
YO_API yo_recti_t       yo_get_screen_rect(yo_box_t *box);
YO_API yo_rectf_t       yo_get_arranged_rect(yo_box_t *box);
YO_API yo_v2f_t         yo_get_content_dim(yo_box_t *box);
YO_API void             yo_set_tag(char *tag);
YO_API void             yo_set_text(char *text);
YO_API void             yo_set_layout(yo_layout_t layout);
YO_API void             yo_set_fill(yo_v4f_t fill);
YO_API void             yo_set_border_s(yo_border_t border);
YO_API void             yo_set_border(float thickness, yo_v4f_t color, float radius);
YO_API void             yo_set_border_thickness(float thickness);
YO_API void             yo_set_border_color(yo_v4f_t color);
YO_API void             yo_set_border_radius(float radius);
YO_API void             yo_set_font(yo_font_id_t font, uint32_t size, yo_v4f_t color);
YO_API void             yo_set_font_id(yo_font_id_t font);
YO_API void             yo_set_font_size(uint32_t size);
YO_API void             yo_set_font_color(yo_v4f_t color);
YO_API void             yo_set_on_top(bool on_top);
YO_API void             yo_set_overflow_a(yo_overflow_t overflow, yo_axis_t axis);
YO_API void             yo_set_overflow_h(yo_overflow_t overflow);
YO_API void             yo_set_overflow_v(yo_overflow_t overflow);
YO_API void             yo_set_align_a(yo_align_t align, yo_axis_t axis);
YO_API void             yo_set_align_h(yo_align_t align);
YO_API void             yo_set_align_v(yo_align_t align);
YO_API void             yo_set_dim_a(yo_length_t length, yo_axis_t axis);
YO_API void             yo_set_dim_h(yo_length_t length);
YO_API void             yo_set_dim_v(yo_length_t length);
YO_API void             yo_set_margin(float left, float top, float right, float bottom);
YO_API void             yo_set_margin_hv(float h, float v);
YO_API void             yo_set_margin_a(float forward, float backward, yo_axis_t axis);
YO_API void             yo_set_margin_left(float left);
YO_API void             yo_set_margin_top(float top);
YO_API void             yo_set_margin_right(float right);
YO_API void             yo_set_margin_bottom(float bottom);
YO_API void             yo_set_padding(float left, float top, float right, float bottom);
YO_API void             yo_set_padding_hv(float h, float v);
YO_API void             yo_set_anim(yo_anim_flags_t flags, float rate);
YO_API void             yo_set_anim_flags(yo_anim_flags_t flags);
YO_API void             yo_set_anim_rate(float rate);
YO_API void             yo_set_scroll(yo_v2f_t offset);
YO_API void             yo_set_scroll_a(float offset, yo_axis_t axis);
YO_API void             yo_set_scroll_h(float offset);
YO_API void             yo_set_scroll_v(float offset);
// TODO(rune): Can we store text_field_state like normal userdata?
// Renderer needs to know about text_field_state to draw cursor+selection.
YO_API yo_text_field_state_t *  yo_get_text_field_state(void);
YO_API void *                   yo_get_userdata(size_t size);
////////////////////////////////////////////////////////////////
//
//
// Children
//
//
////////////////////////////////////////////////////////////////

YO_API void             yo_begin_children(void);
YO_API void             yo_begin_children_of(yo_box_t *box);
YO_API void             yo_end_children(void);
////////////////////////////////////////////////////////////////
//
//
// Popup
//
//
////////////////////////////////////////////////////////////////

// WARNING(rune): Not finished
YO_API void             yo_open_popup(yo_id_t id, yo_popup_flags_t flags);
YO_API bool             yo_begin_popup(yo_id_t id);
YO_API void             yo_end_popup(void);
////////////////////////////////////////////////////////////////
//
//
// Scaled
//
//
////////////////////////////////////////////////////////////////

YO_API void             yo_scaled_triangle(yo_v2f_t p0, yo_v2f_t p1, yo_v2f_t p2, yo_v4f_t color0, yo_v4f_t color1, yo_v4f_t color2);
YO_API void             yo_scaled_checkmark(yo_v4f_t color);
////////////////////////////////////////////////////////////////
//
//
// Font
//
//
////////////////////////////////////////////////////////////////

YO_API yo_font_id_t     yo_font_load(void *data, size_t data_size);
YO_API void             yo_font_unload(yo_font_id_t font);
////////////////////////////////////////////////////////////////
//
//
// Memory
//
//
////////////////////////////////////////////////////////////////

YO_API void *           yo_alloc_temp(size_t size);
// NOTE(rune): Temporary string allocations return a pointer to "" instead of NULL, if the allocation fails.
YO_API char *           yo_alloc_temp_string(YO_PRINTF_FORMAT_STRING char *format, ...);
YO_API char *           yo_alloc_temp_string_v(YO_PRINTF_FORMAT_STRING char *format, va_list args);
////////////////////////////////////////////////////////////////
//
//
// Errors
//
//
////////////////////////////////////////////////////////////////

YO_API yo_error_t       yo_get_error(void);
YO_API char *           yo_get_error_message(void);
////////////////////////////////////////////////////////////////
//
//
// Debug
//
//
////////////////////////////////////////////////////////////////

YO_API void             yo_debug_show_atlas_partitions(void);
YO_API void             yo_debug_show_atlas_texture(void);