yo_csharp/Yo/Old/yo_native.core.cs


    [DllImport("yo_dll.dll")] public static extern yo_context_t* yo_create_context(yo_config_t* config);
    [DllImport("yo_dll.dll")] public static extern void yo_destroy_context(yo_context_t* context);
    [DllImport("yo_dll.dll")] public static extern void yo_select_context(yo_context_t* context);
    [DllImport("yo_dll.dll")] public static extern bool yo_begin_frame(float time, yo_frame_flags_t flags);
    [DllImport("yo_dll.dll")] public static extern void yo_end_frame(yo_render_info_t* buffer);
    [DllImport("yo_dll.dll")] public static extern void yo_input_begin();
    [DllImport("yo_dll.dll")] public static extern void yo_input_mouse_click(yo_mouse_button_t button, uint32_t x, uint32_t y, yo_modifier_t modifiers);
    [DllImport("yo_dll.dll")] public static extern void yo_input_scroll(float x, float y);
    [DllImport("yo_dll.dll")] public static extern void yo_input_key(yo_keycode_t key, yo_modifier_t modifiers);
    [DllImport("yo_dll.dll")] public static extern void yo_input_char(char c, yo_modifier_t modifiers);
    [DllImport("yo_dll.dll")] public static extern void yo_input_unicode(uint32_t codepoint, yo_modifier_t modifiers);
    [DllImport("yo_dll.dll")] public static extern void yo_input_end();
    [DllImport("yo_dll.dll")] public static extern yo_v2i_t yo_query_mouse_pos();
    [DllImport("yo_dll.dll")] public static extern bool yo_query_mouse_button(yo_mouse_button_t button);
    [DllImport("yo_dll.dll")] public static extern bool yo_query_mouse_button_down(yo_mouse_button_t button);
    [DllImport("yo_dll.dll")] public static extern bool yo_query_mouse_button_up(yo_mouse_button_t button);
    [DllImport("yo_dll.dll")] public static extern yo_v2f_t yo_query_scroll();
    [DllImport("yo_dll.dll")] public static extern float yo_delta();
    [DllImport("yo_dll.dll")] public static extern yo_id_t yo_id_from_string(string @string);
    [DllImport("yo_dll.dll")] public static extern yo_id_t yo_id_from_format(string format);
    [DllImport("yo_dll.dll")] public static extern yo_id_t yo_id_from_format_v(string format, va_list args);
    [DllImport("yo_dll.dll")] public static extern void yo_push_id(yo_id_t id);
    [DllImport("yo_dll.dll")] public static extern yo_id_t yo_pop_id();
    [DllImport("yo_dll.dll")] public static extern yo_box_t* yo_box(yo_id_t id, yo_box_flags_t flags);
    [DllImport("yo_dll.dll")] public static extern yo_signal_t yo_get_signal(yo_box_t* box);
    [DllImport("yo_dll.dll")] public static extern yo_recti_t yo_get_screen_rect(yo_box_t* box);
    [DllImport("yo_dll.dll")] public static extern yo_rectf_t yo_get_arranged_rect(yo_box_t* box);
    [DllImport("yo_dll.dll")] public static extern yo_v2f_t yo_get_content_dim(yo_box_t* box);
    [DllImport("yo_dll.dll")] public static extern void yo_set_tag(string tag);
    [DllImport("yo_dll.dll")] public static extern void yo_set_text(string text);
    [DllImport("yo_dll.dll")] public static extern void yo_set_layout(yo_layout_t layout);
    [DllImport("yo_dll.dll")] public static extern void yo_set_fill(yo_v4f_t fill);
    [DllImport("yo_dll.dll")] public static extern void yo_set_border_s(yo_border_t border);
    [DllImport("yo_dll.dll")] public static extern void yo_set_border(float thickness, yo_v4f_t color, float radius);
    [DllImport("yo_dll.dll")] public static extern void yo_set_border_thickness(float thickness);
    [DllImport("yo_dll.dll")] public static extern void yo_set_border_color(yo_v4f_t color);
    [DllImport("yo_dll.dll")] public static extern void yo_set_border_radius(float radius);
    [DllImport("yo_dll.dll")] public static extern void yo_set_font(yo_font_id_t font, uint32_t size, yo_v4f_t color);
    [DllImport("yo_dll.dll")] public static extern void yo_set_font_id(yo_font_id_t font);
    [DllImport("yo_dll.dll")] public static extern void yo_set_font_size(uint32_t size);
    [DllImport("yo_dll.dll")] public static extern void yo_set_font_color(yo_v4f_t color);
    [DllImport("yo_dll.dll")] public static extern void yo_set_on_top(bool on_top);
    [DllImport("yo_dll.dll")] public static extern void yo_set_overflow_a(yo_overflow_t overflow, yo_axis_t axis);
    [DllImport("yo_dll.dll")] public static extern void yo_set_overflow_h(yo_overflow_t overflow);
    [DllImport("yo_dll.dll")] public static extern void yo_set_overflow_v(yo_overflow_t overflow);
    [DllImport("yo_dll.dll")] public static extern void yo_set_align_a(yo_align_t align, yo_axis_t axis);
    [DllImport("yo_dll.dll")] public static extern void yo_set_align_h(yo_align_t align);
    [DllImport("yo_dll.dll")] public static extern void yo_set_align_v(yo_align_t align);
    [DllImport("yo_dll.dll")] public static extern void yo_set_dim_a(yo_length_t length, yo_axis_t axis);
    [DllImport("yo_dll.dll")] public static extern void yo_set_dim_h(yo_length_t length);
    [DllImport("yo_dll.dll")] public static extern void yo_set_dim_v(yo_length_t length);
    [DllImport("yo_dll.dll")] public static extern void yo_set_margin(float left, float top, float right, float bottom);
    [DllImport("yo_dll.dll")] public static extern void yo_set_margin_hv(float h, float v);
    [DllImport("yo_dll.dll")] public static extern void yo_set_margin_a(float forward, float backward, yo_axis_t axis);
    [DllImport("yo_dll.dll")] public static extern void yo_set_margin_left(float left);
    [DllImport("yo_dll.dll")] public static extern void yo_set_margin_top(float top);
    [DllImport("yo_dll.dll")] public static extern void yo_set_margin_right(float right);
    [DllImport("yo_dll.dll")] public static extern void yo_set_margin_bottom(float bottom);
    [DllImport("yo_dll.dll")] public static extern void yo_set_padding(float left, float top, float right, float bottom);
    [DllImport("yo_dll.dll")] public static extern void yo_set_padding_hv(float h, float v);
    [DllImport("yo_dll.dll")] public static extern void yo_set_anim(yo_anim_flags_t flags, float rate);
    [DllImport("yo_dll.dll")] public static extern void yo_set_anim_flags(yo_anim_flags_t flags);
    [DllImport("yo_dll.dll")] public static extern void yo_set_anim_rate(float rate);
    [DllImport("yo_dll.dll")] public static extern void yo_set_scroll(yo_v2f_t offset);
    [DllImport("yo_dll.dll")] public static extern void yo_set_scroll_a(float offset, yo_axis_t axis);
    [DllImport("yo_dll.dll")] public static extern void yo_set_scroll_h(float offset);
    [DllImport("yo_dll.dll")] public static extern void yo_set_scroll_v(float offset);
    [DllImport("yo_dll.dll")] public static extern yo_text_field_state_t* yo_get_text_field_state();
    [DllImport("yo_dll.dll")] public static extern void* yo_get_userdata(size_t size);
    [DllImport("yo_dll.dll")] public static extern void yo_begin_children();
    [DllImport("yo_dll.dll")] public static extern void yo_begin_children_of(yo_box_t* box);
    [DllImport("yo_dll.dll")] public static extern void yo_end_children();
    [DllImport("yo_dll.dll")] public static extern void yo_open_popup(yo_id_t id, yo_popup_flags_t flags);
    [DllImport("yo_dll.dll")] public static extern bool yo_begin_popup(yo_id_t id);
    [DllImport("yo_dll.dll")] public static extern void yo_end_popup();
    [DllImport("yo_dll.dll")] public static extern void yo_scaled_triangle(yo_v2f_t p0, yo_v2f_t p1, yo_v2f_t p2, yo_v4f_t color0, yo_v4f_t color1, yo_v4f_t color2);
    [DllImport("yo_dll.dll")] public static extern void yo_scaled_checkmark(yo_v4f_t color);
    [DllImport("yo_dll.dll")] public static extern yo_font_id_t yo_font_load(void* data, size_t data_size);
    [DllImport("yo_dll.dll")] public static extern void yo_font_unload(yo_font_id_t font);
    [DllImport("yo_dll.dll")] public static extern void* yo_alloc_temp(size_t size);
    [DllImport("yo_dll.dll")] public static extern string yo_alloc_temp_string(string format);
    [DllImport("yo_dll.dll")] public static extern string yo_alloc_temp_string_v(string format, va_list args);
    [DllImport("yo_dll.dll")] public static extern yo_error_t yo_get_error();
    [DllImport("yo_dll.dll")] public static extern string yo_get_error_message();
    [DllImport("yo_dll.dll")] public static extern void yo_debug_show_atlas_partitions();
    [DllImport("yo_dll.dll")] public static extern void yo_debug_show_atlas_texture();
}
